--- a/frontend/src/components/background/Background.css
+++ b/frontend/src/components/background/Background.css
@@ -13,7 +13,7 @@
 }
 
 #large-header {
-  background-image: url("https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/img/demo-1-bg.jpg");
+  background-image: url(/background.jpg);
   background-repeat: repeat;
   overflow: hidden;
 }
